jobs/job_60783810/uncert/errors/benchmark_605/solver_2.txt
INFO: Pointer analysis took 0 sec 15 ms
input.cc:332:10: error: use of undeclared identifier 'node1_index'
  {      node1_index,      node2_index,      node3_index,      node4_index, 
         ^
input.cc:332:28: error: use of undeclared identifier 'node2_index'
  {      node1_index,      node2_index,      node3_index,      node4_index, 
                           ^
input.cc:332:46: error: use of undeclared identifier 'node3_index'
  {      node1_index,      node2_index,      node3_index,      node4_index, 
                                             ^
input.cc:332:64: error: use of undeclared identifier 'node4_index'
  {      node1_index,      node2_index,      node3_index,      node4_index, 
                                                               ^
input.cc:333:9: error: use of undeclared identifier 'node5_index'
        node5_index,      node6_index,      node7_index,      node8_index};
        ^
input.cc:333:27: error: use of undeclared identifier 'node6_index'
        node5_index,      node6_index,      node7_index,      node8_index};
                          ^
input.cc:333:45: error: use of undeclared identifier 'node7_index'
        node5_index,      node6_index,      node7_index,      node8_index};
                                            ^
input.cc:333:63: error: use of undeclared identifier 'node8_index'
        node5_index,      node6_index,      node7_index,      node8_index};
                                                              ^
8 errors generated.
N0zru_Ptr2Arr.c:332:10: error: use of undeclared identifier 'node1_index'
  {      node1_index,      node2_index,      node3_index,      node4_index, 
         ^
N0zru_Ptr2Arr.c:332:28: error: use of undeclared identifier 'node2_index'
  {      node1_index,      node2_index,      node3_index,      node4_index, 
                           ^
N0zru_Ptr2Arr.c:332:46: error: use of undeclared identifier 'node3_index'
  {      node1_index,      node2_index,      node3_index,      node4_index, 
                                             ^
N0zru_Ptr2Arr.c:332:64: error: use of undeclared identifier 'node4_index'
  {      node1_index,      node2_index,      node3_index,      node4_index, 
                                                               ^
N0zru_Ptr2Arr.c:333:9: error: use of undeclared identifier 'node5_index'
        node5_index,      node6_index,      node7_index,      node8_index};
        ^
N0zru_Ptr2Arr.c:333:27: error: use of undeclared identifier 'node6_index'
        node5_index,      node6_index,      node7_index,      node8_index};
                          ^
N0zru_Ptr2Arr.c:333:45: error: use of undeclared identifier 'node7_index'
        node5_index,      node6_index,      node7_index,      node8_index};
                                            ^
N0zru_Ptr2Arr.c:333:63: error: use of undeclared identifier 'node8_index'
        node5_index,      node6_index,      node7_index,      node8_index};
                                                              ^
N0zru_Ptr2Arr.c:726:5: warning: unused label 'ERROR' [-Wunused-label]
    ERROR: __VERIFIER_error();
    ^~~~~~~
1 warning and 8 errors generated.
